--- a/scai/lama/examples/labelrank/CMakeLists.txt
+++ b/scai/lama/examples/labelrank/CMakeLists.txt
@@ -32,7 +32,7 @@
 
 foreach ( executable labelrank )
     add_executable( ${executable} ${executable}.cpp )
-    target_link_libraries( ${executable} ama )
+    target_link_libraries( ${executable} ${PROJECT_NAME} )
     set ( EXAMPLE_EXECUTABLES_LABELRANK "${EXAMPLE_EXECUTABLES_LABELRANK} ${executable}.exe" )
 endforeach ( executable )
 
