--- a/scai/lama/examples/tutorial/CMakeLists.txt
+++ b/scai/lama/examples/tutorial/CMakeLists.txt
@@ -32,7 +32,7 @@
 
 foreach ( executable blas1 matrix scalar simple solver vector )
     add_executable( ${executable} ${executable}.cpp )
-    target_link_libraries( ${executable} ama )
+    target_link_libraries( ${executable} ${PROJECT_NAME} )
     set ( EXAMPLE_EXECUTABLES_TUTORIAL "${EXAMPLE_EXECUTABLES_TUTORIAL} ${executable}.exe" )
 endforeach ( executable )
 
