--- a/scai/lama/test/cuda/CMakeLists.txt
+++ b/scai/lama/test/cuda/CMakeLists.txt
@@ -66,7 +66,7 @@ add_executable ( lama_cuda_test lama_cuda_test.cpp ${CXX_SOURCES} )
 
 ### set target link libraries ###
 if ( WIN32 )
-    target_link_libraries ( lama_cuda_test ama )
+    target_link_libraries ( lama_cuda_test ${PROJECT_NAME} )
 else ( WIN32 )
-    target_link_libraries ( lama_cuda_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
+    target_link_libraries ( lama_cuda_test ${PROJECT_NAME} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
 endif ( WIN32 )
