--- a/scai/hmemo/examples/mic/CMakeLists.txt
+++ b/scai/hmemo/examples/mic/CMakeLists.txt
@@ -37,7 +37,7 @@
 
 foreach ( executable MICExample1 )
     add_executable( ${executable} ${executable}.cpp )
-    target_link_libraries( ${executable} scai_hmemo )
+    target_link_libraries( ${executable} ${PROJECT_NAME} )
     set ( EXAMPLE_EXECUTABLES_MIC "${EXAMPLE_EXECUTABLES_MIC} ${executable}.exe" )
 endforeach ( executable )
 
