--- a/scai/lama/examples/spy/CMakeLists.txt
+++ b/scai/lama/examples/spy/CMakeLists.txt
@@ -45,7 +45,7 @@ if ( PNG_LIBRARY AND PNG_INCLUDE_DIR )
     include_directories( ${PNG_INCLUDE_DIR} )
     foreach ( executable amg_spy spy )
         add_executable( ${executable} ${executable}.cpp )
-        target_link_libraries( ${executable} ama ${PNG_LIBRARY} )
+        target_link_libraries( ${executable} ${PROJECT_NAME} ${PNG_LIBRARY} )
         set ( EXAMPLE_EXECUTABLES_SPY "${EXAMPLE_EXECUTABLES_SPY} ${executable}.exe" )
     endforeach ( executable )
 endif ()
