--- a/scai/logging/doc/conf.py.in
+++ b/scai/logging/doc/conf.py.in
@@ -9,17 +9,17 @@ source_suffix = '.rst'
 master_doc = 'index'
 
 # General information about the project.
-project = u'SCAI Logging'
-copyright = u'2009-${SCAI_LOGGING_COPYRIGHT_YEAR} Fraunhofer Institute for Algorithms and Scientific Computing SCAI for Fraunhofer-Gesellschaft'
+project = u'SCAI ${PROJECT_SURNAME}'
+copyright = u'2009-${SCAI_COPYRIGHT_YEAR} Fraunhofer Institute for Algorithms and Scientific Computing SCAI for Fraunhofer-Gesellschaft'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
 # built documents.
 #
 # The short X.Y version.
-version = '${SCAI_LOGGING_VERSION}'
+version = '${${UPPER_PROJECT_NAME}_VERSION}'
 # The full version, including alpha/beta/rc tags.
-release = '${SCAI_LOGGING_VERSION} (${SCAI_LOGGING_VERSION_NAME})'
+release = '${${UPPER_PROJECT_NAME}_VERSION} (${SCAI_VERSION_NAME})'
 
 # The name of the Pygments (syntax highlighting) style to use.
 pygments_style = 'tango'
@@ -33,13 +33,13 @@ highlight_language = 'c++'
 html_theme = 'sphinxdoc'
 
 # Output file base name for HTML help builder.
-htmlhelp_basename = 'SCAI_LOG_DOC'
+htmlhelp_basename = '${UPPER_PROJECT_NAME}_DOC'
 
 # -- Options for manual page output --------------------------------------------
 
 # One entry per manual page. List of tuples
 # (source start file, name, description, authors, manual section).
 man_pages = [
-    ('index', 'SCAI_LOG', u'SCAI Logging Documentation',
+    ('index', '${UPPER_PROJECT_NAME}', u'SCAI ${PROJECT_SURNAME} Documentation',
      [u'Fraunhofer Institute for Algorithms and Scientific Computing SCAI for Fraunhofer-Gesellschaft'], 1)
 ]
