--- a/scai/tracing/examples/CMakeLists.txt
+++ b/scai/tracing/examples/CMakeLists.txt
@@ -36,7 +36,7 @@ add_definitions( -DSCAI_TRACE_ON )
 
 foreach ( executable TraceTest TraceCalls TraceThreads )
     add_executable( ${executable} ${executable}.cpp )
-    target_link_libraries( ${executable} scai_tracing )
+    target_link_libraries( ${executable} ${PROJECT_NAME} )
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
 
