--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -41,8 +41,9 @@ project ( scai_lama CXX )
 set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
 include ( SetProjectVariables)
-
 include ( VersionDefinition )
+
+include ( Functions/scaiFunctions )
 
 ### Include Compiler Flags
 if    ( NOT SCAI_COMPLETE_BUILD )
@@ -64,14 +65,7 @@ endif ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
 ### include all search packages
 include ( InternalDependencies )
 include ( ExternalDependencies )
-
-foreach    ( module ${${UPPER_PROJECT_NAME}_EXTERNAL_DEPS} )
-    include( Package/${module} )
-endforeach ( module ${${UPPER_PROJECT_NAME}_EXTERNAL_DEPS} )
-
-foreach    ( PACKAGE_TO_FIND ${${UPPER_PROJECT_NAME}_INTERNAL_DEPS} )
-    find_package ( ${PACKAGE_TO_FIND} ${SCAI_FIND_PACKAGE_FLAGS} REQUIRED )
-endforeach ( PACKAGE_TO_FIND $${${UPPER_PROJECT_NAME}_INTERNAL_DEPS} )
+addInternalAndExternalPackages()
 
 ## finalize build flags
 include ( ConcludeFlags )
@@ -103,11 +97,7 @@ endif ( WIN32 )
 
 ### Project System-Include
 include_directories ( ../.. )
-
-foreach    ( module ${${UPPER_PROJECT_NAME}_INTERNAL_DEPS} ${${UPPER_PROJECT_NAME}_EXTERNAL_DEPS} )
-	string ( TOUPPER ${module} upper_module )
-    include_directories( ${${upper_module}_INCLUDE_DIR} )
-endforeach ( module ${${UPPER_PROJECT_NAME}_INTERNAL_DEPS} ${${UPPER_PROJECT_NAME}_EXTERNAL_DEPS} )
+addInternalAndExternalIncludes()
 
 ### build lama library
 
@@ -208,18 +198,7 @@ if ( LAMA_SOLVER_LIBRARIES )
 endif ()
 
 ## add link libraries
-set ( REVERT_LIST ${${UPPER_PROJECT_NAME}_INTERNAL_DEPS} ) # because list does not accept variable recursion
-list ( REVERSE REVERT_LIST )
-foreach    ( module ${REVERT_LIST} )
-    string ( TOUPPER ${module} upper_module )
-    set ( ${UPPER_PROJECT_NAME}_LINK_LIBRARIES ${${UPPER_PROJECT_NAME}_LINK_LIBRARIES} ${${upper_module}_LIBRARY} )
-endforeach ( module ${REVERT_LIST} )
-target_link_libraries ( ${PROJECT_NAME} ${SCAI_START_LINK_LIBRARIES} ${${UPPER_PROJECT_NAME}_LINK_LIBRARIES} ${SCAI_END_LINK_LIBRARIES} )
-
-foreach    ( module ${${UPPER_PROJECT_NAME}_EXTERNAL_DEPS} )
-	string ( TOUPPER ${module} upper_module )
-    target_link_libraries ( ${PROJECT_NAME} ${SCAI_${upper_module}_LIBRARIES} )
-endforeach ( module ${${UPPER_PROJECT_NAME}_EXTERNAL_DEPS} )
+addInternalAndExternalLinkLibraries()
 
 # external libraries
 
