Moved solver QMR from lama to solver lib

--- a/scai/solver/CMakeLists.txt
+++ b/scai/solver/CMakeLists.txt
@@ -142,6 +142,7 @@ scai_project(
         IterativeSolver
         MINRES
         OmegaSolver
+        QMR
         Richardson
         SOR
         SimpleAMG
