IterativeSolver::QMR test & preconditioner added

--- a/scai/lama/test/CMakeLists.txt
+++ b/scai/lama/test/CMakeLists.txt
@@ -96,6 +96,7 @@ scai_project (
         MaxNormTest
         MINRESTest
         NoCommunicatorTest
+        QMRTest
         ResidualStagnationTest
         ResidualThresholdTest
         RichardsonTest
