--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -40,12 +40,20 @@ project ( scai_lama CXX )
 ### Set Module Path
 set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
+### includes ###
+
+## important Variables for project
 include ( SetProjectVariables)
 include ( VersionDefinition )
+include ( InternalDependencies )
+include ( ExternalDependencies )
 
+## needed functions
 include ( Functions/scaiFunctions )
+include ( Functions/scaiProject )
+include ( Functions/relativeInstall )
 
-### Include Compiler Flags
+### Include compile dependent things
 if    ( NOT SCAI_COMPLETE_BUILD )
     include ( SetBuildFlags )
     include ( CompilerVersion )
@@ -53,27 +61,27 @@ if    ( NOT SCAI_COMPLETE_BUILD )
     include ( SetCPPFlags )
     include ( Package/Sphinx )
 else  ( NOT SCAI_COMPLETE_BUILD )
-	include ( Functions/CheckValueAtCompleteBuild )
-	CheckValueAtCompleteBuild ( ${PROJECT_SURNAME} )
+    include ( Functions/CheckValueAtCompleteBuild )
+    CheckValueAtCompleteBuild ( ${PROJECT_SURNAME} )
 endif ( NOT SCAI_COMPLETE_BUILD )
 
+## C++11 or Boost
 include ( CheckC++11 )
 if    ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
     include( Package/Boost )
 endif ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
 
 ### include all search packages
-include ( InternalDependencies )
-include ( ExternalDependencies )
 addInternalAndExternalPackages()
 
 ## finalize build flags
 include ( ConcludeFlags )
 
 ### add definitions ###
-
 add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
 add_definitions ( -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL} )
+add_definitions ( -D${SCAI_LOGGING_FLAG} )
+add_definitions ( -D${SCAI_TRACING_FLAG} )
 
 ## MKL FOUND
 if     ( SCAI_BLAS_NAME STREQUAL "MKL" )
@@ -83,9 +91,6 @@ elseif ( INTERNALBLAS_FOUND )
 else   ( )
     add_definitions( -DADD_ )
 endif  ( )
-
-add_definitions ( -D${SCAI_LOGGING_FLAG} )
-add_definitions ( -D${SCAI_TRACING_FLAG} )
 
 if ( SCAI_OMP_SCHEDULE_FLAG )
     add_definitions ( -D${SCAI_OMP_SCHEDULE_FLAG} )
@@ -99,15 +104,11 @@ endif ( WIN32 )
 include_directories ( ../.. )
 addInternalAndExternalIncludes()
 
-### build lama library
+### Add classes/headers to source files CXX_SOURCES, CXX_HEADERS, ...
 
-include ( Functions/scaiProject )
+scai_project (
 
-### Add classes and header files
-
-scai_project(
-
-    CLASSES
+    CLASSES                  # .cpp, .hpp
 
         CommunicationPlan
         Communicator
@@ -118,7 +119,7 @@ scai_project(
         StorageIO
         Vector
 
-    HEADERS
+    HEADERS                  # .hpp only
 
         UtilKernelTrait
         CSRKernelTrait
@@ -137,33 +138,33 @@ scai_project(
         CRTPCommunicator
     )
 
-### add subdirectories ###
-
-## CUDA
+### add subdirectories
 if ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
     add_subdirectory ( cuda )
+    cuda_compile ( CUDA_FILES ${CUDA_SOURCES} )
+    set ( CXX_SOURCES ${CXX_SOURCES} ${CUDA_FILES} )
 endif ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
 
-## MIC
-if ( USE_MIC )
-    add_subdirectory ( mic )
-endif ( USE_MIC )
-
 add_subdirectory ( distribution )
+add_subdirectory ( doc )
+add_subdirectory( examples )
 add_subdirectory ( expression )
+
+if ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
+    add_subdirectory( gpi )
+endif ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
+
 add_subdirectory ( io )
 add_subdirectory ( matrix )
 add_subdirectory ( matutils )
 
-## MPI
+if ( USE_MIC )
+    add_subdirectory ( mic )
+endif ( USE_MIC )
+
 if ( MPI_FOUND AND USE_MPI )
     add_subdirectory ( mpi )
 endif ( MPI_FOUND AND USE_MPI )
-
-## GPI
-if ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
-    add_subdirectory( gpi )
-endif ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
 
 add_subdirectory ( norm )
 add_subdirectory ( openmp )
@@ -174,7 +175,6 @@ if ( FOUND_BOOST_TEST AND BUILD_TEST )
     add_subdirectory ( test )
 endif ( FOUND_BOOST_TEST AND BUILD_TEST )
 
-
 ### set link directories ###
 if ( WIN32 )
     set ( LAMAPP_LINK_DIRECTORIES ${LAMAPP_LINK_DIRECTORIES} ${Boost_LIBRARY_DIRS} )
@@ -182,26 +182,19 @@ if ( WIN32 )
 endif ( WIN32 )
 
 ### add library ###
-
-if    ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
-	cuda_compile ( CUDA_FILES ${CUDA_SOURCES} )
-	set ( CXX_SOURCES ${CXX_SOURCES} ${CUDA_FILES} )
-endif ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
-
 add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
+set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
+
+## add link libraries
+addInternalAndExternalLinkLibraries()
 
 # Might be some additional solver libraries have been defined
-
 message ( STATUS "LAMA uses following solver libraries: ${LAMA_SOLVER_LIBRARIES}" )
 if ( LAMA_SOLVER_LIBRARIES )
     target_link_libraries( ${PROJECT_NAME} ${LAMA_SOLVER_LIBRARIES} )
 endif ()
 
-## add link libraries
-addInternalAndExternalLinkLibraries()
-
 # external libraries
-
 if    ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
     target_link_libraries ( ${PROJECT_NAME} ${GPI2_LIBRARIES} ${IBVERBS_LIBRARIES} )
 endif ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
@@ -217,16 +210,17 @@ if ( USE_MIC )
         "-offload-option,mic,compiler,\"-L${MKLROOT}/lib/mic -Wl,--start-group -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -Wl,--end-group\"" )
 endif ( USE_MIC )
 
-## install all Include files
-include( Functions/relativeInstall )
+### install ###
+
+## install lib
+install ( TARGETS ${PROJECT_NAME} DESTINATION lib )
+
+## install headers
 relative_install( FILES ${CXX_HEADERS} DESTINATION ${${UPPER_PROJECT_NAME}_INCLUDE_DIR} )
 
 ## install library.hpp
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/lama.hpp.in" "${CMAKE_CURRENT_BINARY_DIR}/include/scai/lama.hpp" )
 install ( FILES "${CMAKE_CURRENT_BINARY_DIR}/include/scai/lama.hpp" DESTINATION include/scai )
-
-## build examples
-add_subdirectory( examples )
 
 # generate file make.inc + install it
 #configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/examples/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/examples/make.inc" )
@@ -236,15 +230,10 @@ add_subdirectory( examples )
 #file ( COPY ${CMAKE_CURRENT_SOURCE_DIR}/examples DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
 #install ( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/examples DESTINATION share )
 
-### add documentation
-add_subdirectory( doc )
-
 ## add custum target distClean
 include ( DistClean )
 
-### install
-install ( TARGETS ${PROJECT_NAME} DESTINATION lib )
-
+### summary ###
 if    ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
 	include ( Summaries/${PROJECT_SURNAME} )
 endif ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
