--- a/scai/blaskernel/CMakeLists.txt
+++ b/scai/blaskernel/CMakeLists.txt
@@ -40,44 +40,42 @@ project ( scai_blaskernel CXX )
 ### Set Module Path
 set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
+### includes ###
+
+## important Variables for project
 include ( SetProjectVariables)
 include ( VersionDefinition )
+include ( InternalDependencies )
+include ( ExternalDependencies )
 
+## needed functions
 include ( Functions/scaiFunctions )
+include ( Functions/scaiProject )
+include ( Functions/relativeInstall )
 
-### Include Compiler Flags
+### Include compile dependent things
 if    ( NOT SCAI_COMPLETE_BUILD )
     include ( SetBuildFlags )
     include ( CompilerVersion )
     include ( SCAIAssert )
     include ( SetCPPFlags )
     include ( Package/Sphinx )
-else  ( NOT SCAI_COMPLETE_BUILD )	
-	include ( Functions/CheckValueAtCompleteBuild )
-	CheckValueAtCompleteBuild ( ${PROJECT_SURNAME} )
+else  ( NOT SCAI_COMPLETE_BUILD )
+    include ( Functions/CheckValueAtCompleteBuild )
+    CheckValueAtCompleteBuild ( ${PROJECT_SURNAME} )
 endif ( NOT SCAI_COMPLETE_BUILD )
 
+## C++11 or Boost
 include ( CheckC++11 )
 if    ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
     include( Package/Boost )
 endif ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
 
 ### include all search packages
-include ( InternalDependencies )
-include ( ExternalDependencies )
 addInternalAndExternalPackages()
 
-## finalize build flags
+### finalize build flags
 include ( ConcludeFlags )
-
-## MKL FOUND
-if     ( SCAI_BLAS_NAME STREQUAL "MKL" )
-    add_definitions( -DSCAI_MKL_BLAS )
-elseif ( INTERNALBLAS_FOUND )
-    add_definitions( -DSCAI_INTERNAL_BLAS )
-else   ( )
-    add_definitions( -DADD_ )
-endif  ( )
 
 ### add definitions
 add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
@@ -95,57 +93,55 @@ if    ( WIN32 )
 	add_definitions ( -DCOMMON_COMPILING_DLL )
 endif ( WIN32 )
 
+## MKL FOUND
+if     ( SCAI_BLAS_NAME STREQUAL "MKL" )
+    add_definitions( -DSCAI_MKL_BLAS )
+elseif ( INTERNALBLAS_FOUND )
+    add_definitions( -DSCAI_INTERNAL_BLAS )
+else   ( )
+    add_definitions( -DADD_ )
+endif  ( )
+
 ## Project System-Include
 include_directories ( ../.. )
 addInternalAndExternalIncludes()
 
-### build library
-
-include ( Functions/scaiProject )
-
 ### Add classes/headers to source files CXX_SOURCES, CXX_HEADERS, ...
-
 scai_project (
 
     CLASSES                  # .cpp, .hpp
 
 
-    HEADERS
+    HEADERS                  # .hpp only
 
         BLASKernelTrait
         cblas
 )
 
 ## add subdirectories
-if ( OPENMP_FOUND AND USE_OPENMP )
-    add_subdirectory ( openmp )
-endif ( OPENMP_FOUND AND USE_OPENMP )
 
-add_subdirectory ( external )
-
-## add CUDA if supported
 if    ( CUDA_FOUND AND USE_CUDA )
     add_subdirectory ( cuda )
+	cuda_compile ( CUDA_FILES ${CUDA_SOURCES} )
+	set ( CXX_SOURCES ${CXX_SOURCES} ${CUDA_FILES} )
 endif ( CUDA_FOUND AND USE_CUDA )
 
-## MIC
+add_subdirectory ( doc )
+add_subdirectory ( external )
+
 if ( USE_MIC )
     add_subdirectory ( mic )
 endif ( USE_MIC )
 
-## add subdirectories
-#add_subdirectory ( examples )
+if ( OPENMP_FOUND AND USE_OPENMP )
+    add_subdirectory ( openmp )
+endif ( OPENMP_FOUND AND USE_OPENMP )
+
 if    ( FOUND_BOOST_TEST AND BUILD_TEST )
     add_subdirectory ( test )
 endif ( FOUND_BOOST_TEST AND BUILD_TEST )
 
-## add library
-if    ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
-	cuda_compile ( CUDA_FILES ${CUDA_SOURCES} )
-	set ( CXX_SOURCES ${CXX_SOURCES} ${CUDA_FILES} )
-endif ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
-
-### add library
+### add library ###
 add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
 set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
 
@@ -158,22 +154,21 @@ if ( USE_MIC )
     #ToDo: set_target_properties not working, any better way?
 endif ( USE_MIC )
 
-### install
+### install ###
 
+## install lib
 install ( TARGETS ${PROJECT_NAME} DESTINATION lib )
 
-include( Functions/relativeInstall )
+## install headers
 relative_install( FILES ${CXX_HEADERS} DESTINATION ${${UPPER_PROJECT_NAME}_INCLUDE_DIR} )
 
 ## install library.hpp
 install ( FILES ../${PROJECT_SURNAME}.hpp DESTINATION include/scai )
 
-###  add documentation
-add_subdirectory( doc )
-
-## add custum target distClean
+### add custum target distClean
 include ( DistClean )
 
+### summary ###
 if    ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
     include ( Summaries/${PROJECT_SURNAME} )
 endif ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
