--- a/scai/kregistry/CMakeLists.txt
+++ b/scai/kregistry/CMakeLists.txt
@@ -40,38 +40,44 @@ project ( scai_kregistry CXX )
 ### Set Module Path
 set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
+### includes ###
+
+## important Variables for project
 include ( SetProjectVariables)
 include ( VersionDefinition )
+include ( InternalDependencies )
+include ( ExternalDependencies )
 
+## needed functions
 include ( Functions/scaiFunctions )
+include ( Functions/scaiProject )
+include ( Functions/relativeInstall )
 
-### Include Compiler Flags
+### Include compile dependent things
 if    ( NOT SCAI_COMPLETE_BUILD )
     include ( SetBuildFlags )
     include ( CompilerVersion )
     include ( SCAIAssert )
     include ( SetCPPFlags )
     include ( Package/Sphinx )
-else  ( NOT SCAI_COMPLETE_BUILD )	
-	include ( Functions/CheckValueAtCompleteBuild )
-	CheckValueAtCompleteBuild ( ${PROJECT_NAME} )
+else  ( NOT SCAI_COMPLETE_BUILD )
+    include ( Functions/CheckValueAtCompleteBuild )
+    CheckValueAtCompleteBuild ( ${PROJECT_SURNAME} )
 endif ( NOT SCAI_COMPLETE_BUILD )
 
+## C++11 or Boost
 include ( CheckC++11 )
 if    ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
     include( Package/Boost )
 endif ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
 
 ### include all search packages
-include ( InternalDependencies )
-include ( ExternalDependencies )
 addInternalAndExternalPackages()
 
 ## finalize build flags
 include ( ConcludeFlags )
 
 ### add definitions
-
 add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
 add_definitions ( -D${SCAI_LOGGING_FLAG} )
 add_definitions ( -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL} )
@@ -82,65 +88,53 @@ endif ( WIN32 )
 
 ### Project System-Include
 include_directories ( ../.. )
-
 addInternalAndExternalIncludes()
-
-#foreach    ( module ${${UPPER_PROJECT_NAME}_INTERNAL_DEPS} ${${UPPER_PROJECT_NAME}_EXTERNAL_DEPS} )
-#	string ( TOUPPER ${module} upper_module )
-#    include_directories( ${${upper_module}_INCLUDE_DIR} )
-#endforeach ( module ${${UPPER_PROJECT_NAME}_INTERNAL_DEPS} ${${UPPER_PROJECT_NAME}_EXTERNAL_DEPS} )
-
-### build library
-
-include ( Functions/scaiProject )
 
 ### Add classes/headers to source files CXX_SOURCES, CXX_HEADERS, ...
 
 scai_project (
 
-    CLASSES
+    CLASSES                  # .cpp, .hpp
 
         ContextFunction
         KernelRegistry
 
-    HEADERS
+    HEADERS                  # .hpp only
 
         KernelContextFunction
 )
 
-## add exception dir
-add_subdirectory ( exception )
-
 ## add subdirectories
+add_subdirectory ( doc )
 add_subdirectory ( examples )
+add_subdirectory ( exception )
 
 if ( FOUND_BOOST_TEST AND BUILD_TEST )
     add_subdirectory ( test )
 endif ( FOUND_BOOST_TEST AND BUILD_TEST )
 
-## add library
+### add library ###
 add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
 set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
 
 ## add link libraries
 addInternalAndExternalLinkLibraries()
 
-### install
+### install ###
 
+## install lib
 install ( TARGETS ${PROJECT_NAME} DESTINATION lib )
 
-include( Functions/relativeInstall )
+## install headers
 relative_install( FILES ${CXX_HEADERS} DESTINATION ${${UPPER_PROJECT_NAME}_INCLUDE_DIR} )
 
 ## install library.hpp
 install ( FILES ../${PROJECT_SURNAME}.hpp DESTINATION include/scai )
 
-### add documentation
-add_subdirectory( doc )
-
 ## add custum target distClean
 include ( DistClean )
 
+### summary ###
 if    ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
         include ( Summaries/${PROJECT_SURNAME} )
 endif ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
