--- a/scai/logging/CMakeLists.txt
+++ b/scai/logging/CMakeLists.txt
@@ -40,12 +40,20 @@ project ( scai_logging CXX )
 ### Set Module Path
 set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
+### includes ###
+
+## important Variables for project
 include ( SetProjectVariables)
 include ( VersionDefinition )
+include ( InternalDependencies )
+include ( ExternalDependencies )
 
+## needed functions
 include ( Functions/scaiFunctions )
+include ( Functions/scaiProject )
+include ( Functions/relativeInstall )
 
-### Include Compiler Flags
+### Include compile dependent things
 if    ( NOT SCAI_COMPLETE_BUILD )
     include ( SetBuildFlags )
     include ( CompilerVersion )
@@ -53,28 +61,25 @@ if    ( NOT SCAI_COMPLETE_BUILD )
     include ( SetCPPFlags )
     include ( Package/Sphinx )
 else  ( NOT SCAI_COMPLETE_BUILD )
-	include ( Functions/CheckValueAtCompleteBuild )
-	CheckValueAtCompleteBuild ( ${PROJECT_SURNAME} )
+    include ( Functions/CheckValueAtCompleteBuild )
+    CheckValueAtCompleteBuild ( ${PROJECT_SURNAME} )
 endif ( NOT SCAI_COMPLETE_BUILD )
 
+## C++11 or Boost
 include ( CheckC++11 )
 if    ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
     include( Package/Boost )
 endif ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
 
 ### include all search packages
-include ( InternalDependencies )
-# no external dependencies
-addInternalPackages()
+addInternalAndExternalPackages()
 
 ## finalize build flags
 include ( ConcludeFlags )
 
 ### add definitions
-
 add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
 add_definitions ( -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL} )
-
 # logging level for logging library
 # GenLogger uses also logging during initialization, here we make a fixed setting
 add_definitions ( -DSCAI_LOG_LEVEL_DEBUG )
@@ -85,20 +90,13 @@ endif ( WIN32 )
 
 ### Project System-Include
 include_directories ( ../.. )
-addInternalIncludes()
+addInternalAndExternalIncludes()
 
-### build library
-
-## add subdirectories
-add_subdirectory ( examples )
-
-## set files in variables CXX_SOURCES and CXX_HEADERS
-
-include ( Functions/scaiProject )
+### Add classes/headers to source files CXX_SOURCES, CXX_HEADERS, ...
 
 scai_project (
 
-    CLASSES
+    CLASSES                  # .cpp, .hpp
 
         GenLoggerCreator
         Level
@@ -107,42 +105,45 @@ scai_project (
         GenLogger
         SourceLocation
  
-    HEADERS
+    HEADERS                  # .hpp only
 
         AbstractLoggerCreator
 )
 
-### add library
+## add subdirectories
+add_subdirectory ( doc )
+add_subdirectory ( examples )
+## begin subdir test
+# prepare test
+configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/test/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/test/make.inc" )
+file ( COPY ${CMAKE_CURRENT_SOURCE_DIR}/test DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
+# add test
+enable_testing()
+add_test ( logging_test test/test.sh )
+## end subdir test
 
+### add library ###
 add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
 set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
 
 ## add link libraries
-addInternalLinkLibraries()
+addInternalAndExternalLinkLibraries()
 
 ### install ###
+
+## install lib
 install ( TARGETS ${PROJECT_NAME} DESTINATION lib )
 
-include ( Functions/relativeInstall )
+## install headers
 relative_install ( FILES ${CXX_HEADERS} DESTINATION ${${UPPER_PROJECT_NAME}_INCLUDE_DIR} )
 
 ## install library.hpp
 install ( FILES ../${PROJECT_SURNAME}.hpp DESTINATION include/scai )
 
-## prepare test
-configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/test/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/test/make.inc" )
-file ( COPY ${CMAKE_CURRENT_SOURCE_DIR}/test DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
-
-## add test
-enable_testing()
-add_test ( logging_test test/test.sh )
-
-### add documentation
-add_subdirectory( doc )
-
 ## add custum target distClean
 include ( DistClean )
 
+### summary ###
 if    ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
 	include ( Summaries/${PROJECT_SURNAME} )
 endif ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
