added xmltest for solver

--- a/scai/solver/test/CMakeLists.txt
+++ b/scai/solver/test/CMakeLists.txt
@@ -82,9 +82,9 @@ file ( GLOB LOCAL_HEADERS "*.hpp" )
 
 install ( FILES ${LOCAL_HEADERS} DESTINATION include/scai/solver/test )
 
-### Copy the xmltest.sh file in build directory ### 
-#file ( COPY xmltest.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} ) 
+### Copy the README and xmltest.sh file in build directory ### 
+file ( COPY xmltest.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} ) 
 
 if ( USE_CODE_COVERAGE )
     configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/code_coverage.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/code_coverage.sh" @ONLY)
-endif ( USE_CODE_COVERAGE )    
+endif ( USE_CODE_COVERAGE )
