--- a/scai/hmemo/examples/CMakeLists.txt
+++ b/scai/hmemo/examples/CMakeLists.txt
@@ -52,3 +52,4 @@ install ( DIRECTORY ./ DESTINATION ${PROJECT_EXAMPLE_DIR} FILES_MATCHING REGEX "
 install ( FILES Makefile README ${CMAKE_CURRENT_BINARY_DIR}/make.inc DESTINATION ${PROJECT_EXAMPLE_DIR} )
 install ( FILES cuda/Makefile DESTINATION ${PROJECT_EXAMPLE_DIR}/cuda )
 install ( FILES mic/Makefile DESTINATION ${PROJECT_EXAMPLE_DIR}/mic )
+install ( PROGRAMS run_all.sh DESTINATION ${PROJECT_EXAMPLE_DIR} )
