Added other distribution tests and redistributor test.

--- a/scai/dmemo/test/CMakeLists.txt
+++ b/scai/dmemo/test/CMakeLists.txt
@@ -38,6 +38,17 @@ scai_project (
     SOURCES
 
         CommunicatorTest
+
+        DistributionTest
+
+        NoDistributionTest
+        BlockDistributionTest
+        CyclicDistributionTest
+        GenBlockDistributionTest
+        GeneralDistributionTest
+        MetisDistributionTest
+
+        RedistributorTest
     )
 
 ### checks ####
