--- a/scai/logging/doc/conf.py.in
+++ b/scai/logging/doc/conf.py.in
@@ -2,6 +2,15 @@ import sys, os
 
 # -- General configuration -----------------------------------------------------
 
+# Add any Sphinx extension module names here, as strings. They can be extensions
+# coming with Sphinx (named 'sphinx.ext.*') or your custom ones.
+extensions = ['sphinx.ext.mathjax', 'sphinx.ext.intersphinx']
+
+intersphinx_mapping = {
+    'scaicommon': ('${SCAI_COMMON_DOC_DIR}', None)
+}
+
+
 # The suffix of source filenames.
 source_suffix = '.rst'
 
