--- a/scai/tracing/doc/conf.py.in
+++ b/scai/tracing/doc/conf.py.in
@@ -6,7 +6,10 @@ import sys, os
 # coming with Sphinx (named 'sphinx.ext.*') or your custom ones.
 extensions = ['sphinx.ext.intersphinx']
 
-intersphinx_mapping = {'scailogging': ('${SCAI_LOGGING_DOC_DIR}', None)}
+intersphinx_mapping = {
+    'scaicommon': ('${SCAI_COMMON_DOC_DIR}', None),
+    'scailogging': ('${SCAI_LOGGING_DOC_DIR}', None)
+}
 
 # The suffix of source filenames.
 source_suffix = '.rst'
