Reactivated parallel solver tests

--- a/scai/solver/test/distributed/CMakeLists.txt
+++ b/scai/solver/test/distributed/CMakeLists.txt
@@ -40,11 +40,11 @@ scai_project (
 	SOURCES
         SolverDistTest
         
-        #P_CGTest
-        #P_InverseSolverTest
-        #P_JacobiTest
-        #P_SORTest
-        #P_SpecializedJacobiTest
+        P_CGTest
+        P_InverseSolverTest
+        P_JacobiTest
+        P_SORTest
+        P_SpecializedJacobiTest
 
    )
    
