Corrected misspelling for dmemo library.

--- a/scai/dmemo/examples/make.inc.in
+++ b/scai/dmemo/examples/make.inc.in
@@ -37,7 +37,7 @@ CXX_FLAGS=${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -DSCAI_TRACE_OFF -DSCAI_
 CXX_CUDA=${CUDA_NVCC_EXECUTABLE}
 CXX_CUDA_FLAGS=${CUDA_NVCC_FLAGS_CLEAN}
 CUDA_TOOLKIT_INCLUDE=${CUDA_TOOLKIT_INCLUDE}
-SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} ${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -scai_dmemo -lscai_hmemo -lscai_tasking -lscai_tracing -lscai_logging -lscai_common
+SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} ${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -lscai_dmemo -lscai_hmemo -lscai_tasking -lscai_tracing -lscai_logging -lscai_common
 EXECUTABLES=${EXAMPLE_EXECUTABLES}
 EXECUTABLES_CUDA=${EXAMPLE_EXECUTABLES_CUDA}
 EXECUTABLES_MIC=${EXAMPLE_EXECUTABLES_MIC}
