--- a/scai/logging/doc/CMakeLists.txt
+++ b/scai/logging/doc/CMakeLists.txt
@@ -31,11 +31,7 @@
  # @since 1.0.1
 ###
 
-#find_package ( Sphinx ${SCAI_FIND_PACKAGE_FLAGS} )
-
-### SPHINX DOCUMENTATION ###
-
-if ( BUILD_DOC )
+if ( SPHINX_FOUND AND BUILD_DOC )
     ### install ###
     set ( LAMA_DOC_DIR "${CMAKE_SOURCE_DIR}/doc" )
     set ( SPHINX_BUILD_ROOT "${CMAKE_CURRENT_BINARY_DIR}" )
@@ -66,4 +62,4 @@ if ( BUILD_DOC )
         DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/
         DESTINATION ${SPHINX_INSTALL_ROOT}
     )
-endif ( BUILD_DOC )
+endif ( SPHINX_FOUND AND BUILD_DOC )
